[project]
name = "alens-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["sqlmodel>=0.0.32", "textual>=7.5.0"]

[dependency-groups]
dev = ["textual-dev>=1.8.0"]


[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
